# synopkg

./: .env.darwin-arm64  .env.darwin-x64  .env.linux-arm64-glibc  .env.linux-x64-glibc  .env.win32-arm64-msvc  .env.win32-x64-msvc  .gitignore  .mailmap  .synopackrc.js  .synopkgrc.json  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  LICENSE.md  README.md  biome.json  index.html  justfile  package-lock.json  package.json  pnpm-lock.yaml  rustfmt.toml  sitemap-0.xml  sitemap-index.xml
.github/: CODEOWNERS  FUNDING.yml  README.md  close-label.yml  issue-report-config.json  pr-auto-comments.yml  pr-badge.yml  pr-branch-labeler.yml
.zed/: settings.json  tasks.json
_astro/: hoisted.B7hgkRhy.js  hoisted.BMNS_Di5.js  hoisted.BaI6zzuS.js  hoisted.CWLNdjgw.js  hoisted.sI3SkG53.js  hoisted.vmXmjoxp.js  index.hNjA89ef.css  ui-core.BO4YlAbc.js  ui-core.DYsvEVQe.js  ui-core.DdSpm2mJ.js  ui-core.Eb_I-h28.js  ui-core.WbSfEdc_.js  ui-core.i-Xq3hyx.js
examples/: index.html
npm/: index.js  synopkg.ts
pagefind/: pagefind-entry.json  pagefind.en-gb_23951c9c54b12.pf_meta  pagefind.en-gb_5543558e819c7.pf_meta  pagefind.en-gb_6aa1f2e53e41e.pf_meta  pagefind.en-gb_826cb123cdbcf.pf_meta  pagefind.en-gb_ac2977a263a46.pf_meta  pagefind.en-gb_bea64e76bfb72.pf_meta
scripts/: check-engines.mjs
site/: astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
src/: bin.ts  cli.rs  config.rs  context.rs  dependency.rs  dependency_type.rs  effects.rs  format.rs  format_test.rs  group_selector.rs  instance.rs  instance_state.rs  logger.rs  main.rs  option.ts  (+12 more)
(+262 files in other folders)
